refactor SickNoteStatisticsService to take range instead of year